--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,7 +14,14 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 futures-util = "0.3"
 axum = "0.7"
-tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tokio-stream = "0.1"
 tower-http = { version = "0.6", features = ["trace"] }
+sqlx = { version = "0.6", features = [
+    "runtime-tokio-rustls",
+    "sqlite",
+    "chrono",
+] }
+dotenv = "0.15"
+chrono = { version = "0.4", features = ["serde"] }
